rearrange the code for convLSTM_slip_detection_1layer to test loss vs n_frames_ahead

--- a/dataset3_process.ipynb
+++ b/dataset3_process.ipynb
@@ -1862,7 +1862,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## resample data  with skipping ---> double size"
+    "## resample data  with skipping ---> Halve the size  to increase the dynamic change through the frames"
    ]
   },
   {
